tests/ui/g-roleprogram-witness-mismatch.stderr
error: cannot construct `RoleProgram<0>` with struct literal syntax due to private fields
 --> tests/ui/g-roleprogram-witness-mismatch.rs:6:27
  |
6 |     core::hint::black_box(RoleProgram::<0> {});
  |                           ^^^^^^^^^^^^^^^^
