tests/ui/g-roleprogram-witness-mismatch.rs

use hibana::runtime::program::RoleProgram;

fn main() {
    core::hint::black_box(RoleProgram::<0> {});
}
